kubernetes/rfam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rfam-website
  namespace: dev
  labels:
    app: rfam-website
    component: catalyst-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfam-website
  template:
    metadata:
      labels:
        app: rfam-website
        component: catalyst-app
    spec:
      containers:
      - name: rfam-catalyst
        image: ghcr.io/rfam/rfam-website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: catalyst
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      
      restartPolicy: Always
