kubernetes/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-proxy
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-proxy
  template:
    metadata:
      labels:
        app: apache-proxy
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        command: ['sh', '-c']
        args:
        - |
          [...]
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: dev
spec:
  selector:
    app: apache-proxy
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
