kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalyst-service
  namespace: dev
spec:
  selector:
    app: rfam-website
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: dev
spec:
  selector:
    app: apache-proxy
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
